kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app-ns
spec:
  selector:
    app: inventory-app
    tier: backend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
