kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: app-ns
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/ingress.class: nginx
  labels:
    app: inventory-app
  name: backend-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: host.ipinventorylist.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend
            port:
              number: 80
